deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-nginx
# deployment
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: aplikasi-nginx
  # pod
  template:
    metadata:
      labels:
        app: aplikasi-nginx
    spec:
      containers:
      - name: aplikasi-nginx
        image: nginx:1.22.1
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
        # env
        volumeMounts:
        - name: configssh
          mountPath: /var/secret/ssh
          readOnly: true
      volumes:
      - name: configssh
        secret:
          secretName: ssh-key

# horizontal pod autoscaler
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: ClusterIP  
  selector:
    app: aplikasi-nginx
  ports:
  - port: 8080
    targetPort: 80
    # nodePort: 30001

# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  rules:
  - host: pecel-lele.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-nginx
            port: 
              number: 8080
